# MiniCompiler

./: Ast.cpp  Ast.h  AstTest.cpp  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Makefile  README.md  SPL_common.h  SymbolTable.cpp  SymbolTable.h  SystemFunc.cpp  SystemFunc.h  codegentest.cpp  input  lexer  lexer.cpp  lexer.l  lexertest.c  lib.spl  main.cpp  output  parser.cpp  parser.hpp  parser.y  readme.md  splc  test_ast.cpp  token.h
